# backend/routes/files/delete_file.go
@@ -1,12 +1,14 @@
 package files
 
 import (
+	"errors"
 	"net/http"
 
 	"github.com/board-uai/clocess/cache"
 	"github.com/board-uai/clocess/db"
 	"github.com/board-uai/clocess/db/sqlc"
 	"github.com/board-uai/clocess/storage"
+	"github.com/jackc/pgx/v5"
 	"github.com/labstack/echo/v5"
 	"github.com/redis/go-redis/v9"
 	"github.com/rs/zerolog"
@@ -16,10 +18,11 @@ import (
 // @Summary      Delete a file
 // @Tags         files
 // @Accept       json
-// @Param        body  body  deleteFileDTO  true  "file_id"
+// @Param        body  body  deleteFileDTO  true  "file_id and file_name"
 // @Success      200
 // @Failure      400  {object}  map[string]string
 // @Failure      401  {object}  map[string]string
+// @Failure      404  {object}  map[string]string
 // @Failure      500  {object}  map[string]string
 // @Router       /file/delete [post]
 func DeleteFile(c *echo.Context, logger *zerolog.Logger, redis *redis.Client, s *storage.Storage, masterKey []byte) error {
@@ -35,30 +38,47 @@ func DeleteFile(c *echo.Context, logger *zerolog.Logger, redis *redis.Client, s 
 	}
 
 	queries := sqlc.New(db.Pool)
+	remoteID, err := queries.GetFileRemote(ctx, sqlc.GetFileRemoteParams{
+		ID:       deleteFileRequest.FileID,
+		UserID:   userID,
+		Filename: deleteFileRequest.Filename,
+	})
+	if err != nil {
+		if errors.Is(err, pgx.ErrNoRows) {
+			return echo.NewHTTPError(http.StatusNotFound, "file not found")
+		}
+		logger.Err(err).Msg("failed to find remoteID by request")
+		return echo.NewHTTPError(http.StatusInternalServerError, "internalServerError")
+	}
 
 	filename, err := queries.GetFileName(ctx, sqlc.GetFileNameParams{
-		ID:     deleteFileRequest.FileID,
-		UserID: userID,
+		ID:       deleteFileRequest.FileID,
+		UserID:   userID,
+		RemoteID: remoteID,
 	})
 	if err != nil {
 		logger.Err(err).Int32("file_id", deleteFileRequest.FileID).Msg("failed to get filename name of fileID")
 		return echo.NewHTTPError(http.StatusInternalServerError, "failed to get filename name of fileID")
 	}
 
-	remoteInfo, err := queries.GetServerConnectionInfo(ctx, deleteFileRequest.RemoteID)
+	remoteInfo, err := queries.GetRemoteConnection(ctx, sqlc.GetRemoteConnectionParams{
+		ID:     remoteID,
+		UserID: userID,
+	})
 	if err != nil {
-		return nil
+		logger.Err(err).Int32("remote_id", remoteID).Msg("failed to get remote connection info")
+		return echo.NewHTTPError(http.StatusInternalServerError, "failed to get remote connection info")
 	}
 
 	remoteConnectionInfo := storage.RemoteConnection{
 		UserID:           userID,
-		RemoteID:         deleteFileRequest.RemoteID,
-		RemoteHost:       remoteInfo[0].Host,
-		RemotePort:       remoteInfo[0].Port,
-		RemoteUsername:   remoteInfo[0].Username,
-		RemoteBasePath:   remoteInfo[0].BasePath,
-		RemotePrivKey:    remoteInfo[0].EncryptedPrivateKey,
-		RemoteKeyVersion: remoteInfo[0].KeyVersion,
+		RemoteID:         remoteID,
+		RemoteHost:       remoteInfo.Host,
+		RemotePort:       remoteInfo.Port,
+		RemoteUsername:   remoteInfo.Username,
+		RemoteBasePath:   remoteInfo.BasePath,
+		RemotePrivKey:    remoteInfo.EncryptedPrivateKey,
+		RemoteKeyVersion: remoteInfo.KeyVersion,
 	}
 
 	if err := s.DeleteFile(remoteConnectionInfo, int(deleteFileRequest.FileID), filename); err != nil {
@@ -67,8 +87,9 @@ func DeleteFile(c *echo.Context, logger *zerolog.Logger, redis *redis.Client, s 
 	}
 
 	if _, err := queries.DeleteFile(ctx, sqlc.DeleteFileParams{
-		ID:     deleteFileRequest.FileID,
-		UserID: userID,
+		ID:       deleteFileRequest.FileID,
+		UserID:   userID,
+		RemoteID: remoteID,
 	}); err != nil {
 		logger.Err(err).Int32("file_id", deleteFileRequest.FileID).Msg("failed to delete file record")
 		return echo.NewHTTPError(http.StatusInternalServerError, "failed to delete file")
