# backend/routes/files/files_DTO.go
@@ -5,16 +5,16 @@ import (
 )
 
 type deleteFileDTO struct {
-	FileID   int32 `json:"file_id"`
-	RemoteID int32 `json:"remote_id"`
+	FileID   int32  `json:"file_id"`
+	Filename string `json:"file_name"`
 }
 
 type downloadFileDTO struct {
-	FileID   int32 `query:"file_id"`
-	RemoteID int32 `json:"remote_id"`
+	FileID   int32  `query:"file_id"`
+	Filename string `query:"file_name"`
 }
 
 type fileUploadDTO struct {
 	File     *multipart.FileHeader `form:"file"`
-	RemoteId int32                 `json:"remote_id"`
+	RemoteId int32                 `form:"remote_id"`
 }
